--- a/public/mypage.html
+++ b/public/mypage.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Flo</title>
+    <title>[User nickname] / Flo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div>
-            <img />
+            <img src="/assets/ralph-wave.gif" alt="Profile image" />
             <h1>Your Name</h1>
         </div>
         <a href="/timer">Timer</a>
@@ -53,6 +53,7 @@
     <main>
         <h2>No requests from your colleagues</h2>
     </main>
-    <a href="/chat">chat</a>
+    <a href="/chat">Chat</a>
+    <a href="/logout">Logout</a>
 </body>
 </html>
