--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login / Flo</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/lodash@4.16.6"></script>
 </head>
 <body>
     <h1>Login</h1>
@@ -22,6 +23,7 @@
     </form>
     <a href="/reset-password">Forgot password?</a>
     <a href="/register">New user</a>
+    <script src="./js/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
